@@ -1,2 +1,11 @@
 # CPSC233W22ProjectDemo3
+NAME: Carter Tam, Omar Khan
+TUTORIAL: T06
+DATE: 04/14/2022
+Directions to run:
 
+Open the directory containing the .jar file in the terminal
+Locate the javafx SDK on your computer
+Enter the followiing command: java --module-path "<insert the path of the javafx sdk 'lib' directory here>" --add-modules javafx.controls,javafx.fxml -jar CPSC233ProjectDemo3.jar
+
+For example, we would run the command java --module-path "C:\Program Files\Java\javafx-sdk-17.0.2\lib" --add-modules javafx.controls,javafx.fxml -jar CPSC233ProjectDemo3.jar
